# rust-fraud-detection-api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.resources  IMPLEMENTATION.md  README.md  RESOURCES_IMAGE.md  docker-compose.yml  info.json  nginx.conf
.github/workflows/: submission.yml
resources/: mcc_risk.json  normalization.json
scripts/: publish_resources_image.sh
src/: fdpass.rs  json.rs  main.rs  models.rs  normalization.rs  search.rs
test/: results.json  test.js
