[package]
name = "fraud-detection-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
rayon = "1.10"
half = { version = "2.4", features = ["serde"] }
rand = "0.8"
memmap2 = "0.9.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
